Fixed a responsive layout issue with the highscores tables for smartphones size

--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -52,6 +52,17 @@ h4 {
    object-fit: contain;
 }
 
+.highscore-categories {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 4px;
+}
+
+.category-title {
+    display: flex;
+    justify-content: center;
+}
+
 .bg-animated {
     animation: bgAnimated 10s infinite;
 }
@@ -69,3 +80,10 @@ h4 {
     75% { background-color: #2b3a42; }
     100% { background-color: #3e2c41; }
 }
+
+  @media screen and (max-width: 720px) {
+    .highscore-categories {
+        grid-template-columns: repeat(3, 1fr);
+        gap: 16px;
+    }
+  }
